--- a/about-project.html
+++ b/about-project.html
@@ -79,47 +79,45 @@
         </nav>
     </div>
     <!--Card Section-->
-    <div class="container card-container">
+    <div class="container section about">
 
         <div class="columns is-centered">
-            <div>
-                <img src="./img/about-project/ladybird.svg" class="ladybird" alt="img">
-            </div>
-            <div class="column is-9">
-                <div class="card is-card">
-                    <div class="card-content card-content-1">
-                        <div class="media-content">
-                            <p class="title is-4  is-card-title">რატომ ვიყენებთ მას?</p>
-                        </div>
-                    </div>
 
-                    <div class="content is-card-text is-family-secondary">
-                        <div class="text">
-                            <div class="text-scroll">
-                                ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და
-                                დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად
-                                სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე.<br><br>
-                                შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი
-                                პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით
-                                ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ
-                                დაუსრულებელ გვერდს გვიჩვენებენ.<br><br>წლების მანძილზე ამ ტექსტის უამრავი ვერსია
-                                გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
-                            </div>
+            <div class="column is-9 is-relative">
+                <div class="about_image-1 is-absolute">
+                    <figure class="image is-32x32">
+                        <img src="./img/about-project/ladybird.svg" alt="img">
+                    </figure>
+                </div>
+                <div class="card px-5">
+                    <div class="card-header-title">
+                        <h1 class="title has-text-primary is-size-4 has-text-weight-light mt-6">რატომ ვიყენებთ მას?
+                        </h1>
+                    </div>
+                    <div class="card-content pb-6 is-family-secondary">
+                        <div class="content">
+                            ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და
+                            დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად
+                            სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე.
+                        </div>
+                        <div class="content">შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია.დღეს
+                            უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით
+                            ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ
+                            დაუსრულებელ გვერდს გვიჩვენებენ.
+                        </div>
+                        <div class="content pb-4">წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით
+                            დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
                         </div>
                     </div>
                 </div>
-            </div>
-            <div>
-                <img src="./img/about-project/fly.svg" class="is-fly">
+                <div class="about_image-2 is-absolute">
+                    <figure class="image is-256x256 ">
+                        <img src="./img/about-project/fly.svg" class="is-fly">
+                    </figure>
+                </div>
             </div>
         </div>
     </div>
-    <!-- <div>
-        <img src="./img/about-project/ladybird.svg" class="ladybird">
-     </div>
-    <div>
-        <img src="./img/about-project/fly.svg" class="is-fly">
-    </div> -->
 
 
 
