--- a/main-page.html
+++ b/main-page.html
@@ -85,9 +85,31 @@
             <div>
                 <img src="./img/main-page/fly-2.svg" alt="fly" class="fly-2">
             </div>
-            <div>
+            <!-- <div>
                 <img src="./img/main-page/earth.svg" alt="globe" class="earth">
-            </div>
+            </div> -->
+            <div class="dropdown is-hoverable has-dropdown is-arrowless">
+                <div class="dropdown-trigger is-arrowless">
+                  <button class="dropdown-button"  aria-haspopup="true" aria-controls="dropdown-menu">
+                    <img src="./img/main-page/earth.svg" class="earth" >
+                  </button>
+                </div>
+                <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                  <div class="dropdown-content">
+                    <a href="#" class="dropdown-item">
+                     ქართული
+                    <a class="dropdown-item">
+                     English
+                    </a>
+                    <a href="#" class="dropdown-item">
+                      თარიღი
+                    </a>
+                    <a href="#" class="dropdown-item">
+                      Random
+                    </a>
+                  </div>
+                </div>
+              </div>
             <div class="columns is-mobile is-centered">
                 <form>
                     <div class="field has-addons is-family-secondary">
@@ -112,55 +134,11 @@
                     <div class="card mt-5">
                         <div class="padding-top">
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class=" has-text-white user-color">
+                                    <i class="fas  fa-user"></i>
                                 </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
-                                </a>
-                                <p
-                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-inline-block">
-                                    Lorem ipsum
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
-                                    ლორემ იფსუმ
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
-                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
-                                </p>
-                            </div>
-                        </div>
-                        <div>
-                            <img src="img/main-page/share.svg" alt="share">
-                        </div>
-                        <button class="button click-button">
-                            <a class="click" href="index.html">სრულად</a>
-                        </button>
-                    </div>
-                    <div class="card mt-5">
-                        <div class="padding-top">
-                            <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
                                 <p
                                     class="title has-text-weight-bold has-text-primary is-size-7 text-style is-inline-block">
@@ -168,27 +146,28 @@
                                 </p>
                             </div>
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
+                                <a class=" has-text-white user-color">
                                     <i class="fi user"></i>
                                 </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
                                 <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
                                     ლორემ იფსუმ
                                 </p>
                             </div>
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="has-text-white user-color">
+                                    <i class="fi user user-color"></i>
                                 </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
                                 <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
                                     საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
                                 </p>
                             </div>
+
                         </div>
                         <div>
                             <img src="img/main-page/share.svg" alt="share">
@@ -200,38 +179,40 @@
                     <div class="card mt-5">
                         <div class="padding-top">
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class=" has-text-white user-color">
+                                    <i class="fas  fa-user"></i>
                                 </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
-                                <p class="title has-text-primary is-size-7 text-style is-inline-block">
+                                <p
+                                    class="title has-text-primary is-size-7 text-style is-inline-block">
                                     Lorem ipsum
                                 </p>
                             </div>
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
+                                <a class=" has-text-white user-color">
                                     <i class="fi user"></i>
                                 </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
                                 <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
                                     ლორემ იფსუმ
                                 </p>
                             </div>
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="has-text-white user-color">
+                                    <i class="fi user user-color"></i>
                                 </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
                                 <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
                                     საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
                                 </p>
                             </div>
+
                         </div>
                         <div>
                             <img src="img/main-page/share.svg" alt="share">
@@ -240,41 +221,44 @@
                             <a class="click" href="index.html">სრულად</a>
                         </button>
                     </div>
+
                     <div class="card mt-5">
                         <div class="padding-top">
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class=" has-text-white user-color">
+                                    <i class="fas  fa-user"></i>
                                 </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
-                                <p class="title  has-text-primary is-size-7 text-style is-inline-block">
+                                <p
+                                    class="title has-text-primary is-size-7 text-style is-inline-block">
                                     Lorem ipsum
                                 </p>
                             </div>
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
+                                <a class=" has-text-white user-color">
                                     <i class="fi user"></i>
                                 </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
                                 <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
                                     ლორემ იფსუმ
                                 </p>
                             </div>
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="has-text-white user-color">
+                                    <i class="fi user user-color"></i>
                                 </a>
-                                <a class=" has-text-primary">
-                                    <i class="fi user"></i>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
                                 </a>
                                 <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
                                     საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
                                 </p>
                             </div>
+
                         </div>
                         <div>
                             <img src="img/main-page/share.svg" alt="share">
@@ -283,6 +267,54 @@
                             <a class="click" href="index.html">სრულად</a>
                         </button>
                     </div>
+
+                    <div class="card mt-5">
+                        <div class="padding-top">
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-white user-color">
+                                    <i class="fas  fa-user"></i>
+                                </a>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <p
+                                    class="title  has-text-primary is-size-7 text-style is-inline-block">
+                                    Lorem ipsum
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-white user-color">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    ლორემ იფსუმ
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class="has-text-white user-color">
+                                    <i class="fi user user-color"></i>
+                                </a>
+                                <a class="icon has-text-primary">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div>
+                            <img src="img/main-page/share.svg" alt="share">
+                        </div>
+                        <button class="button click-button">
+                            <a class="click" href="index.html">სრულად</a>
+                        </button>
+                    </div>
+
+
 
 
                 </div>
