main page- style

--- a/Front-HTML/contact.html
+++ b/Front-HTML/contact.html
@@ -91,7 +91,7 @@
                 <!-- card -->
                 <div class="card px-5">
                     <div class="card-header-title">
-                        <h1 class="title has-text-primary is-size-4 has-text-weight-light mt-6 mb-5">კონტაქტი</>
+                        <h1 class="title has-text-primary is-size-4 has-text-weight-light mt-6 mb-5">კონტაქტი</h1>
                     </div>
 
                     <div class="card-content is-family-secondary pb-6">
