--- a/Front-HTML/main-page.html
+++ b/Front-HTML/main-page.html
@@ -78,7 +78,7 @@
             </div>
         </nav>
 
-        <div class="container section">
+        <div class="container">
             <div>
                 <img src="./img/main-page/fly-1.svg" alt="fly" class="fly-1">
             </div>
@@ -94,8 +94,8 @@
                     <img src="./img/main-page/earth.svg" class="earth" >
                   </button>
                 </div>
-                <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                  <div class="dropdown-content">
+                <div class="dropdown-menu dropdown-menu-content" id="dropdown-menu" role="menu">
+                  <div class="dropdown-content dropdown-menu-content-item">
                     <a href="#" class="dropdown-item">
                      ქართული
                     <a class="dropdown-item">
@@ -114,7 +114,7 @@
                 <form>
                     <div class="field has-addons is-family-secondary">
                         <div class="control">
-                            <input class="card input is-rounded" type="mail" placeholder="საძიებო სიტყვა"
+                            <input class="card input search-input is-rounded" type="mail" placeholder="საძიებო სიტყვა"
                                 style="width:710px;font-size:14px;height:100px;padding-left:50px;">
                             <img src="./img/main-page/blue-mark.svg" alt="blue-mark" class="blue-mark">
                             <input type="image" src="./img/main-page/search.svg" class="search" />
@@ -124,7 +124,7 @@
                 </form>
             </div>
         </div>
-        <div class="container ">
+        <div class="container">
             <div>
                 <img src="./img/main-page/yellow-ladybird.svg" alt="ladybird" class="yellow-ladybird">
             </div>
@@ -134,8 +134,8 @@
                     <div class="card mt-5">
                         <div class="padding-top">
                             <div class="is-family-secondary padding-left">
-                                <a class=" has-text-white user-color">
-                                    <i class="fas  fa-user"></i>
+                                <a class="has-text-white user-color">
+                                    <i class="fi user"></i>
                                 </a>
                                 <a class="icon has-text-primary">
                                     <i class="fas fa-info-circle"></i>
@@ -180,7 +180,7 @@
                         <div class="padding-top">
                             <div class="is-family-secondary padding-left">
                                 <a class=" has-text-white user-color">
-                                    <i class="fas  fa-user"></i>
+                                    <i class="fi user"></i>
                                 </a>
                                 <a class="icon has-text-primary">
                                     <i class="fas fa-info-circle"></i>
