--- a/Front-HTML/contact.html
+++ b/Front-HTML/contact.html
@@ -85,7 +85,7 @@
                 <!-- img -->
                 <div class="contact_image-box-1 is-absolute">
                     <figure class="image is-64x64">
-                        <img src="./img/fly.svg" alt="fly">
+                        <img src="../Front-HTML/img/contact/contact-img-1.svg" alt="fly">
                     </figure>
                 </div>
                 <!-- card -->
