--- a/Front-HTML/main-page.html
+++ b/Front-HTML/main-page.html
@@ -452,11 +452,21 @@
                         </button>
                     </div> -->
 
-
-
-
                 </div>
             </div>
+            <nav class="pagination is-centered" role="navigation" aria-label="pagination">
+                <ul class="pagination-list">
+                  <li><a class="pagination-link pagination-link-content is-current" aria-label="Goto page 1">01</a></li>
+                  <li><a class="pagination-link pagination-link-content" aria-label="Goto page 2">02</a></li>
+                  <li><a class="pagination-link pagination-link-content" aria-label="Page 3" aria-current="page">03</a></li>
+                  <li><a class="pagination-link pagination-link-content" aria-label="Goto page 4">04</a></li>
+                  <li><a class="pagination-link pagination-link-content" aria-label="Goto page 5">05</a></li>
+                  <li><a class="pagination-link pagination-link-content" aria-label="Goto page 6">06</a></li>
+                  <li>
+                    <span class="has-text-primary pagination-ellipsis">&hellip;</span>
+                  </li> 
+                </ul>
+              </nav>
         </div>
 
 
