--- a/Front-HTML/english-alphabet.html
+++ b/Front-HTML/english-alphabet.html
@@ -83,49 +83,36 @@
              <img src="./img/alphabet-georgian/bee.svg">
             </div>
             <div class="columns">
-                <div class="column is-12">
+                <div class="column is-9" style="margin:auto;">
                 <div class="card card-radius" style="padding:20px;">
                     <div class="is-flex is-justify-center has-text-primary is-family-primary is-size-4 ">
                         <ul class="is-flex">
-                            <li class="li-position">ა</li>
-                            <li class="li-position">ბ</li>
-                            <li class="li-position">გ</li>
-                            <li class="li-position">დ</li>
-                            <li class="li-position">ე</li>
-                            <li class="li-position">ვ</li>
-                            <li class="li-position">ზ</li>
-                            <li class="li-position">თ</li>
-                            <li class="li-position">ი</li>
-                            <li class="li-position">კ</li>
-                            <li class="li-position">ლ</li>
-                            <li class="li-position">მ</li>
-                            <li class="li-position">ნ</li>
-                            <li class="li-position">ო</li>
-                            <li class="li-position">პ</li>
-                            <li class="li-position">ჟ</li>
-                            <li class="li-position">რ</li>
-                            <li class="li-position">ს</li>
-                            <li class="li-position">ტ</li>
-                            <li class="li-position">უ</li>
-                            <li class="li-position">ფ</li>
-                            <li class="li-position">ქ</li>
-                            <li class="li-position">ღ</li>
-                            <li class="li-position">ყ</li>
-                            <li class="li-position">შ</li>
-                            <li class="li-position">ჩ</li>
-                            <li class="li-position">ც</li>
-                            <li class="li-position">ძ</li>
-                            <li class="li-position">წ</li>
-                            <li class="li-position">ჭ</li>
-                            <li class="li-position">ხ</li>
-                            <li class="li-position">ჯ</li>
-                            <li class="li-position">ჰ</li>
-
-
-
-
-
-
+                            <li class="li-position-en">A</li>
+                            <li class="li-position-en">B</li>
+                            <li class="li-position-en">C</li>
+                            <li class="li-position-en">D</li>
+                            <li class="li-position-en">E</li>
+                            <li class="li-position-en">F</li>
+                            <li class="li-position-en">G</li>
+                            <li class="li-position-en">H</li>
+                            <li class="li-position-en">I</li>
+                            <li class="li-position-en">J</li>
+                            <li class="li-position-en">K</li>
+                            <li class="li-position-en">L</li>
+                            <li class="li-position-en">M</li>
+                            <li class="li-position-en">N</li>
+                            <li class="li-position-en">O</li>
+                            <li class="li-position-en">P</li>
+                            <li class="li-position-en">Q</li>
+                            <li class="li-position-en">R</li>
+                            <li class="li-position-en">S</li>
+                            <li class="li-position-en">T</li>
+                            <li class="li-position-en">U</li>
+                            <li class="li-position-en">V</li>
+                            <li class="li-position-en">W</li>
+                            <li class="li-position-en">X</li>
+                            <li class="li-position-en">Y</li>
+                            <li class="li-position-en">Z</li>
 
                         </ul>
                     </div>
@@ -181,7 +168,6 @@
             </div>
             <div class="columns is-mobile is-centered">
                 <div class="column is-7-widescreen is-7-desktop is-8-tablet is-12-mobile is-relative">
-                    <span class="found">მოიძებნა 12 სიტყვა</span>
                     <div class="card" style="margin-top:40px;">
                         <div class="padding-top">
                             <div class="is-family-secondary padding-left card-content-item mb-1">
