--- a/Front-HTML/alphabet-georgian.html
+++ b/Front-HTML/alphabet-georgian.html
@@ -165,8 +165,7 @@
                 <form>
                     <div class="field has-addons is-family-secondary">
                         <div class="control">
-                            <input class="card input search-input is-rounded" type="mail" placeholder="საძიებო სიტყვა"
-                                style="width:700px;font-size:14px;height:100px;padding-left:50px;">
+                            <input class="card input search-input is-rounded input-style" type="mail" placeholder="საძიებო სიტყვა">
                             <img src="./img/main-page/blue-mark.svg" alt="blue-mark" class="blue-mark">
                             <input type="image" src="./img/main-page/search.svg" class="search" />
                             <input type="image" src="./img/main-page/plus.svg" class="plus" />
@@ -366,145 +365,7 @@
                             </button>
                         </div>
                     </div>
-                    <!-- <div class="card mt-5">
-                        <div class="padding-top">
-                            <div class="is-family-secondary padding-left card-content-item">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class="fa-info-content icon has-text-primary">
-                                    <i class="fas fa-info-circle "></i>
-                                </a>
-                                <p
-                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
-                                    Lorem ipsum
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    ლორემ იფსუმ
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
-                                </p>
-                            </div>
-
-                        </div>
-                        <div>
-                            <img src="img/main-page/share.svg" alt="share">
-                        </div>
-                        <button class="button click-button">
-                            <a class="click" href="index.html">სრულად</a>
-                        </button>
-                    </div>
-
-                    <div class="card mt-5">
-                        <div class="padding-top">
-                            <div class="is-family-secondary padding-left card-content-item">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class="fa-info-content icon has-text-primary">
-                                    <i class="fas fa-info-circle "></i>
-                                </a>
-                                <p
-                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
-                                    Lorem ipsum
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    ლორემ იფსუმ
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
-                                </p>
-                            </div>
-
-                        </div>
-                        <div>
-                            <img src="img/main-page/share.svg" alt="share">
-                        </div>
-                        <button class="button click-button">
-                            <a class="click" href="index.html">სრულად</a>
-                        </button>
-                    </div>
-
-                    <div class="card mt-5">
-                        <div class="padding-top">
-                            <div class="is-family-secondary padding-left card-content-item">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class="fa-info-content icon has-text-primary">
-                                    <i class="fas fa-info-circle "></i>
-                                </a>
-                                <p
-                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
-                                    Lorem ipsum
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    ლორემ იფსუმ
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
-                                </p>
-                            </div>
-
-                        </div>
-                        <div>
-                            <img src="img/main-page/share.svg" alt="share">
-                        </div>
-                        <button class="button click-button">
-                            <a class="click" href="index.html">სრულად</a>
-                        </button>
-                    </div> -->
-
-                </div>
+              </div>
             </div>
             <nav class="pagination is-centered" role="navigation" aria-label="pagination">
                 <ul class="pagination-list">
