--- a/Front-HTML/english-alphabet.html
+++ b/Front-HTML/english-alphabet.html
@@ -152,8 +152,7 @@
                 <form>
                     <div class="field has-addons is-family-secondary">
                         <div class="control">
-                            <input class="card input search-input is-rounded" type="mail" placeholder="საძიებო სიტყვა"
-                                style="width:700px;font-size:14px;height:100px;padding-left:50px;">
+                            <input class="card input search-input is-rounded input-style" type="mail" placeholder="საძიებო სიტყვა">
                             <img src="./img/main-page/blue-mark.svg" alt="blue-mark" class="blue-mark">
                             <input type="image" src="./img/main-page/search.svg" class="search" />
                             <input type="image" src="./img/main-page/plus.svg" class="plus" />
@@ -164,7 +163,7 @@
         </div>
         <div class="container">
             <div>
-                <img src="./img/main-page/yellow-ladybird.svg" alt="ladybird" class="yellow-ladybird">
+                <img src="./img/main-page/yellow-ladybird.svg" alt="ladybird" class="yellow-ladybird-en">
             </div>
             <div class="columns is-mobile is-centered">
                 <div class="column is-7-widescreen is-7-desktop is-8-tablet is-12-mobile is-relative">
