--- a/Front-HTML/user-info.html
+++ b/Front-HTML/user-info.html
@@ -109,8 +109,7 @@
                 <form>
                     <div class="field has-addons is-family-secondary">
                         <div class="control">
-                            <input class="card input search-input is-rounded" type="mail" placeholder="საძიებო სიტყვა"
-                                style="width:700px;font-size:14px;height:100px;padding-left:50px;">
+                            <input class="card input search-input is-rounded input-style" type="mail" placeholder="საძიებო სიტყვა">
                             <img src="./img/main-page/blue-mark.svg" alt="blue-mark" class="blue-mark">
                             <div class="search-svg"></div>
                             <input type="image" src="./img/main-page/search.svg" class="search" />
