--- a/Front-HTML/user-info.html
+++ b/Front-HTML/user-info.html
@@ -123,7 +123,7 @@
 
         <div class="container is-arrowless">
             <div>
-                <img src="./img/main-page/yellow-ladybird.svg" alt="ladybird" class="yellow-ladybird">
+                <img src="./img/main-page/yellow-ladybird.svg" alt="ladybird" class="user-ladybird" style="position:absolute; left:17.5rem;top:1.5rem;z-index:30">
             </div>
             <div class="columns is-mobile is-centered">
                 <div class="column is-7-widescreen is-7-desktop is-8-tablet is-12-mobile is-relative">
@@ -145,12 +145,7 @@
                                     Lorem ipsum
                                 </p>
                             </div>
-                            <!-- <div class="is-family-secondary padding-left card-content-item mb-1 ml-6">
-                                <p
-                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center ml-1">
-                                    <a href="#" class="has-text-primary" target="_blank">ლინკი</a>
-                                </p>
-                            </div> -->
+
                             <div class="is-family-secondary padding-left card-content-item mb-1">
                                 <a class="icon has-text-white user-color">
                                     <i class="fi user is-align-end"></i>
