--- a/Front-HTML/main-page.html
+++ b/Front-HTML/main-page.html
@@ -296,7 +296,7 @@
                                 </a>
                             </div>
                             <button class="button click-button">
-                                <a class="click" href="index.html">სრულად</a>
+                                <a class="click" href="user-info.html">სრულად</a>
                             </button>
                         </div>
                     </div>
@@ -424,135 +424,7 @@
                                 </a>
                             </div>
                             <button class="button click-button">
-                                <a class="click" href="index.html">სრულად</a>
-                            </button>
-                        </div>
-                    </div> 
-                    <div class="card mt-5">
-                        <div class="padding-top">
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class="fa-info-content icon has-text-primary" href="user-info.html">
-                                    <i class="fas fa-info-circle "></i>
-                                </a>
-                                <p
-                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
-                                    Lorem ipsum
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content"  href="user-info.html">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    ლორემ იფსუმ
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content" href="user-info.html">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class="fa-info-content icon has-text-primary">
-                                    <i class="fas fa-info-circle "></i>
-                                </a>
-                                <p
-                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
-                                    Lorem ipsum
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    ლორემ იფსუმ
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class="fa-info-content icon has-text-primary">
-                                    <i class="fas fa-info-circle "></i>
-                                </a>
-                                <p
-                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
-                                    Lorem ipsum
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    ლორემ იფსუმ
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user is-align-end"></i>
-                                </a>
-                                <a class="icon has-text-primary fa-info-content">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
-                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
-                                </p>
-                            </div>
-                            <div class="is-family-secondary padding-left card-content-item mb-1">
-                                <a class="icon has-text-white user-color">
-                                    <i class="fi user"></i>
-                                </a>
-                                <a class="fa-info-content icon has-text-primary">
-                                    <i class="fas fa-info-circle "></i>
-                                </a>
-                                <p
-                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
-                                    Lorem ipsum
-                                </p>
-                            </div>
-                        </div>
-                        <div class="level-right share-full-content">
-                            <div>
-                                <a class="icon share-item ">
-                                    <i class="fi share is-flex is-justify-center is-align-end"></i>
-                                </a>
-                            </div>
-                            <button class="button click-button">
-                                <a class="click" href="index.html">სრულად</a>
+                                <a class="click" href="user-info.html">სრულად</a>
                             </button>
                         </div>
                     </div>
@@ -680,7 +552,7 @@
                                 </a>
                             </div>
                             <button class="button click-button">
-                                <a class="click" href="index.html">სრულად</a>
+                                <a class="click" href="user-info.html">სრულად</a>
                             </button>
                         </div>
                     </div>
@@ -808,7 +680,135 @@
                                 </a>
                             </div>
                             <button class="button click-button">
-                                <a class="click" href="index.html">სრულად</a>
+                                <a class="click" href="user-info.html">სრულად</a>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card mt-5">
+                        <div class="padding-top">
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class="fa-info-content icon has-text-primary" href="user-info.html">
+                                    <i class="fas fa-info-circle "></i>
+                                </a>
+                                <p
+                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
+                                    Lorem ipsum
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user is-align-end"></i>
+                                </a>
+                                <a class="icon has-text-primary fa-info-content"  href="user-info.html">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
+                                    ლორემ იფსუმ
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user is-align-end"></i>
+                                </a>
+                                <a class="icon has-text-primary fa-info-content" href="user-info.html">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
+                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class="fa-info-content icon has-text-primary">
+                                    <i class="fas fa-info-circle "></i>
+                                </a>
+                                <p
+                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
+                                    Lorem ipsum
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user is-align-end"></i>
+                                </a>
+                                <a class="icon has-text-primary fa-info-content">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
+                                    ლორემ იფსუმ
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user is-align-end"></i>
+                                </a>
+                                <a class="icon has-text-primary fa-info-content">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
+                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class="fa-info-content icon has-text-primary">
+                                    <i class="fas fa-info-circle "></i>
+                                </a>
+                                <p
+                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
+                                    Lorem ipsum
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user is-align-end"></i>
+                                </a>
+                                <a class="icon has-text-primary fa-info-content">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
+                                    ლორემ იფსუმ
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user is-align-end"></i>
+                                </a>
+                                <a class="icon has-text-primary fa-info-content">
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-flex is-align-center">
+                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                                </p>
+                            </div>
+                            <div class="is-family-secondary padding-left card-content-item mb-1">
+                                <a class="icon has-text-white user-color">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class="fa-info-content icon has-text-primary">
+                                    <i class="fas fa-info-circle "></i>
+                                </a>
+                                <p
+                                    class="title has-text-weight-bold has-text-primary is-size-7 text-style is-flex is-align-center">
+                                    Lorem ipsum
+                                </p>
+                            </div>
+                        </div>
+                        <div class="level-right share-full-content">
+                            <div>
+                                <a class="icon share-item ">
+                                    <i class="fi share is-flex is-justify-center is-align-end"></i>
+                                </a>
+                            </div>
+                            <button class="button click-button">
+                                <a class="click" href="user-info.html">სრულად</a>
                             </button>
                         </div>
                     </div>
